--- a/content-src/styles/_variables.scss
+++ b/content-src/styles/_variables.scss
@@ -118,6 +118,7 @@ $card-preview-image-height-large: 155px;
 // Compact cards for Highlights
 $card-height-compact: 160px;
 $card-preview-image-height-compact: 108px;
+$domain-width: 180px;
 
 $topic-margin-top: 12px;
 
